--- a/app/index.html
+++ b/app/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<meta name="viewport" content="width=device-width,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,initial-scale=1.0">
-	<!--build:css css/style.css-->
+
+	<head>
+		<meta charset="UTF-8">
+		<title>Document</title>
+		<meta name="viewport" content="width=device-width,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,initial-scale=1.0">
+		<!--build:css css/style.css-->
 		<link rel="stylesheet" href="./css/index.css">
-		<link rel="stylesheet" href="./css/common.css">
-	<!-- endbuild -->
-</head>
-<body>
-	<div id="test">
-		<p>thx all</p>
-	</div>
-	<script src="./index.js"></script>
-	<!--build:js js/build.min.js -->
-	<script src="./js/ajax.js"></script>
-	<script src="./js/rem.js"></script>
-	<script src="./js/tcw.js"></script>
-	<!-- endbuild -->
-</body>
+		<link rel="stylesheet" href="./css/reset.css">
+		<!-- endbuild -->
+	</head>
+
+	<body>
+		<div id="test">
+			<div class="touch-box">
+				<div class="target"></div>
+			</div>
+			<div class="info">123</div>
+		</div>
+		<script src="./js/main.js"></script>
+		<!--build:js js/build.min.js -->
+		<!-- <script src="./js/ajax.js"></script>
+		<script src="./js/rem.js"></script>
+		<script src="./js/tcw.js"></script> -->
+		<!-- endbuild -->
+	</body>
+
 </html>
