--- a/app/index.html
+++ b/app/index.html
@@ -14,9 +14,10 @@
 	<body>
 		<div id="test">
 			<div class="touch-box">
-				<div class="target"></div>
+				<div class="target">
+					<img src="" alt="">
+				</div>
 			</div>
-			<div class="info">123</div>
 		</div>
 		<script src="./js/main.js"></script>
 		<!--build:js js/build.min.js -->
