--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 		<div id="test">
 			<div class="touch-box">
 				<div class="target">
-					<img src="" alt="">
+					<img src="" alt="" class="target_img" draggable="false">
 				</div>
 			</div>
 		</div>
